--- a/style.css
+++ b/style.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 #map {
     height: 400px; /* The height is 400 pixels */
     width: 100%; /* The width is the width of the web page */
@@ -22,19 +15,9 @@ body {
 }
 
 /*
-   * Optional: Makes the sample page fill the window.
+   * restaurent styles in unhighlighted state.
    */
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-/*
-   * Property styles in unhighlighted state.
-   */
-.property {
+.restaurent {
     align-items: center;
     background-color: #219653;
     border-radius: 20%;
@@ -51,7 +34,7 @@ body {
     width: 30px;
 }
 
-.property::after {
+.restaurent::after {
     border-left: 9px solid transparent;
     border-right: 9px solid transparent;
     border-top: 9px solid #219653;
@@ -66,39 +49,39 @@ body {
     z-index: 1;
 }
 
-.property .icon {
+.restaurent .icon {
     align-items: center;
     display: flex;
     justify-content: center;
     color: #fff;
 }
 
-.property .icon svg {
+.restaurent .icon svg {
     height: 20px;
     width: auto;
 }
 
-.property .details {
+.restaurent .details {
     display: none;
     flex-direction: column;
     flex: 1;
 }
 
-.property .address {
+.restaurent .address {
     color: #9e9e9e;
     font-size: 10px;
     margin-bottom: 10px;
     margin-top: 5px;
 }
 
-.property .features {
+.restaurent .features {
     align-items: flex-end;
     display: flex;
     flex-direction: row;
     gap: 10px;
 }
 
-.property .features > div {
+.restaurent .features > div {
     align-items: center;
     background: #f5f5f5;
     border-radius: 5px;
@@ -110,9 +93,9 @@ body {
 }
 
 /*
-   * Property styles in highlighted state.
+   * restaurent styles in highlighted state.
    */
-.property.highlight {
+.restaurent.highlight {
     background-color: #219653;
     border-radius: 8px;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
@@ -121,87 +104,87 @@ body {
     width: auto;
 }
 
-.property.highlight::after {
+.restaurent.highlight::after {
     border-top: 9px solid #219653;
 }
 
-.property.highlight .details {
+.restaurent.highlight .details {
     display: flex;
 }
 
-.property.highlight .icon svg {
+.restaurent.highlight .icon svg {
     width: 50px;
     height: 50px;
 }
 
-.property .bed {
+.restaurent .bed {
     color: #ffa000;
 }
 
-.property .bath {
+.restaurent .bath {
     color: #219653;
 }
 
-.property .size {
+.restaurent .size {
     color: #388e3c;
 }
 
 /*
    * House icon colors.
    */
-.property.highlight:has(.fa-house) .icon {
+.restaurent.highlight:has(.fa-house) .icon {
     color: var(--house-color);
 }
 
-.property:not(.highlight):has(.fa-house) {
+.restaurent:not(.highlight):has(.fa-house) {
     background-color: var(--house-color);
 }
 
-.property:not(.highlight):has(.fa-house)::after {
+.restaurent:not(.highlight):has(.fa-house)::after {
     border-top: 9px solid var(--house-color);
 }
 
 /*
    * Building icon colors.
    */
-.property.highlight:has(.fa-building) .icon {
+.restaurent.highlight:has(.fa-building) .icon {
     color: var(--building-color);
 }
 
-.property:not(.highlight):has(.fa-building) {
+.restaurent:not(.highlight):has(.fa-building) {
     background-color: var(--building-color);
 }
 
-.property:not(.highlight):has(.fa-building)::after {
+.restaurent:not(.highlight):has(.fa-building)::after {
     border-top: 9px solid var(--building-color);
 }
 
 /*
    * Warehouse icon colors.
    */
-.property.highlight:has(.fa-warehouse) .icon {
+.restaurent.highlight:has(.fa-warehouse) .icon {
     color: var(--warehouse-color);
 }
 
-.property:not(.highlight):has(.fa-warehouse) {
+.restaurent:not(.highlight):has(.fa-warehouse) {
     background-color: var(--warehouse-color);
 }
 
-.property:not(.highlight):has(.fa-warehouse)::after {
+.restaurent:not(.highlight):has(.fa-warehouse)::after {
     border-top: 9px solid var(--warehouse-color);
 }
 
 /*
    * Shop icon colors.
    */
-.property.highlight:has(.fa-shop) .icon {
+.restaurent.highlight:has(.fa-shop) .icon {
     color: var(--shop-color);
 }
 
-.property:not(.highlight):has(.fa-shop) {
+.restaurent:not(.highlight):has(.fa-shop) {
     background-color: var(--shop-color);
 }
 
-.property:not(.highlight):has(.fa-shop)::after {
+.restaurent:not(.highlight):has(.fa-shop)::after {
     border-top: 9px solid var(--shop-color);
 }
